DotBlue/tests/valid/PropertySpacing_3.php
<?php

class Foo
{

    private $a;



    protected $b;


    protected $d;



    public $c;



    public function __construct() { }

}