DotBlue/tests/invalid/PropertySpacing_1.php
<?php

class Foo
{

    private $a;


    private $b;


    protected $c;

    public $d;



    public function __construct() { }

}
